<resources>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="zoneId">zoneId</string>
    <string name="spiece">spiece</string>
    <string name="size">size</string>
    <string name="specie">specie</string>
    <string name="limitS">limitS</string>
    <string name="limitC">limitC</string>
    <string name="openSeason">openSeason</string>
    <string name="closeSeason">closeSeason</string>
    <string name="limit_for_sport_license">LIMIT FOR SPORT LICENSE:</string>
    <string name="limit_for_recreational_license">LIMIT FOR RECREATIONAL LICENSE:</string>
    <string name="sizeTitle">SIZE:</string>
    <string name="open_season">OPEN SEASON:</string>
    <string name="close_season">CLOSE SEASON:</string>
    <string name="shortnose_cisco">shortnose_cisco</string>
</resources>