<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fishingRegulation"
            type="com.sheridan.stn991602827.fishingregulation.data.FishingRegulation" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/zoneId"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:id="@+id/zoneIdTitle"
                style="@style/Widget.Inventory.Header"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="2" />
            <!--        app:layout_constraintEnd_toStartOf="@+id/specie"-->
            <TextView
                android:id="@+id/specieTitle"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.Inventory.Header"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:layout_marginTop="20dp"
                android:text="@string/specie"
                app:layout_constraintStart_toStartOf="@+id/zoneIdTitle"
                app:layout_constraintTop_toBottomOf="@+id/zoneIdTitle"
                app:layout_constraintVertical_weight="2" />

            <TextView
                android:id="@+id/sizeTitle"
                android:text="@string/size"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.Inventory.Header"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_between_elements"
                app:layout_constraintStart_toStartOf="@+id/specieTitle"
                app:layout_constraintTop_toBottomOf="@+id/specieTitle"
                app:layout_constraintVertical_weight="2" />

            <TextView
                android:id="@+id/limitSTitle"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.Inventory.Header"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:text="@string/limitS"
                app:layout_constraintStart_toStartOf="@+id/sizeTitle"
                app:layout_constraintTop_toBottomOf="@+id/sizeTitle"
                app:layout_constraintVertical_weight="2" />

            <TextView
                android:id="@+id/limitCTitle"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.Inventory.Header"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:text="@string/limitC"
                app:layout_constraintStart_toStartOf="@+id/limitSTitle"
                app:layout_constraintTop_toBottomOf="@+id/limitSTitle"
                app:layout_constraintVertical_weight="2" />

            <TextView
                android:id="@+id/openSeasonTitle"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.Inventory.Header"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:text="@string/openSeason"
                app:layout_constraintStart_toStartOf="@+id/limitCTitle"
                app:layout_constraintTop_toBottomOf="@+id/limitCTitle"
                app:layout_constraintVertical_weight="2" />

            <TextView
                android:id="@+id/closeSeasonTitle"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.Inventory.Header"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:text="@string/closeSeason"
                app:layout_constraintStart_toStartOf="@+id/openSeasonTitle"
                app:layout_constraintTop_toBottomOf="@+id/openSeasonTitle"
                app:layout_constraintVertical_weight="2" />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2.5">

            <TextView
                android:id="@+id/zoneId"
                style="@style/Widget.Inventory.TextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:layout_marginTop="24dp"
                android:layout_weight="1"
                android:text="@{Integer.toString(fishingRegulation.zoneId)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="2" />

            <TextView
                android:id="@+id/specie"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.Inventory.TextView"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:layout_marginTop="20dp"
                android:text="@{fishingRegulation.specie}"
                app:layout_constraintStart_toStartOf="@+id/zoneIdTitle"
                app:layout_constraintTop_toBottomOf="@+id/zoneIdTitle"
                app:layout_constraintVertical_weight="2"
                tools:text="small mouth"/>

            <TextView
                android:id="@+id/size"
                style="@style/Widget.Inventory.TextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:layout_weight="2"
                android:text="@{fishingRegulation.size}"
                app:layout_constraintStart_toStartOf="@+id/specieTitle"
                app:layout_constraintTop_toBottomOf="@+id/specieTitle"
                app:layout_constraintVertical_weight="2"
                tools:text="15 inches" />

            <TextView
                android:id="@+id/limitS"
                style="@style/Widget.Inventory.TextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:layout_weight="2"
                android:text="@{fishingRegulation.limitS}"
                app:layout_constraintStart_toStartOf="@+id/sizeTitle"
                app:layout_constraintTop_toBottomOf="@+id/sizeTitle"
                app:layout_constraintVertical_weight="2"
                tools:text="6 no more than 5 inches" />

            <TextView
                android:id="@+id/limitC"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.Inventory.TextView"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:text="@{fishingRegulation.limitC}"
                app:layout_constraintStart_toStartOf="@+id/limitSTitle"
                app:layout_constraintTop_toBottomOf="@+id/limitSTitle"
                app:layout_constraintVertical_weight="2"
                tools:text="2 less than 3 inches"/>

            <TextView
                android:id="@+id/openSeason"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.Inventory.TextView"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:text="@{fishingRegulation.openSeason}"
                app:layout_constraintStart_toStartOf="@+id/limitCTitle"
                app:layout_constraintTop_toBottomOf="@+id/limitCTitle"
                app:layout_constraintVertical_weight="2"
                tools:text="first Friday in May"/>

            <TextView
                android:id="@+id/closeSeason"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                style="@style/Widget.Inventory.Header"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_between_elements"
                android:text="@{fishingRegulation.closeSeason}"
                app:layout_constraintStart_toStartOf="@+id/openSeasonTitle"
                app:layout_constraintTop_toBottomOf="@+id/openSeasonTitle"
                app:layout_constraintVertical_weight="2"
                tools:text="last Friday in December"/>

        </LinearLayout>
    </LinearLayout>
</layout>